--- a/WebContent/pages/consultaEstatistica.xhtml
+++ b/WebContent/pages/consultaEstatistica.xhtml
@@ -24,7 +24,7 @@
     <div id="header">
       <div id="logo">
         <img src="${facesContext.externalContext.request.contextPath}/images/brasao_md.png"/>
-        <div class="slogan">Acesso Cliente</div>
+        <div class="slogan">Estatística</div>
       </div>
       <div id="menubar">
         <ul id="menu">
